[MDP-1] DRL reuse works; Java Re-Use broken (chances for classloading strageness in drools).